--- a/web/landing/style.css
+++ b/web/landing/style.css
@@ -21,6 +21,35 @@ h3 {
     --main-margin-top: 0;
 }
 
+/* Toutes les nuances de gris en fond */
 .bg-gray-800 {
     background-color: var(--gray-800)
+}
+
+.bg-gray-700 {
+    background-color: var(--gray-700)
+}
+
+.bg-gray-600 {
+    background-color: var(--gray-600)
+}
+
+.bg-gray-500 {
+    background-color: var(--gray-500)
+}
+
+.bg-gray-400 {
+    background-color: var(--gray-400)
+}
+
+.bg-gray-300 {
+    background-color: var(--gray-300)
+}
+
+.bg-gray-200 {
+    background-color: var(--gray-200)
+}
+
+.bg-gray-100 {
+    background-color: var(--gray-100)
 }
