--- a/models/generator/templates/root-messages/model.mustache
+++ b/models/generator/templates/root-messages/model.mustache
@@ -11,7 +11,7 @@ import java.util.Arrays;
 {{#imports}}
     import {{import}};
 {{/imports}}
-import com.hubsante.model.edxl.UseCaseMessage;
+import com.hubsante.model.edxl.ContentMessage;
 import com.fasterxml.jackson.dataformat.xml.annotation.*;
 {{#serializableModel}}
     import java.io.Serializable;
