add config for generator

--- a/models/generator/templates/child-classes/pojo.mustache
+++ b/models/generator/templates/child-classes/pojo.mustache
@@ -25,8 +25,7 @@ public class {{classname}} {{#parent}}extends {{{.}}} {{/parent}}{{#vendorExtens
     private static final long serialVersionUID = 1L;
 
 {{/serializableModel}}
-{{#vars}}
-    {{#isEnum}}
+{{#vars}}    {{#isEnum}}
         {{^isContainer}}
             {{>modelInnerEnum}}
         {{/isContainer}}
