--- a/models/generator/templates/wrapper/model.mustache
+++ b/models/generator/templates/wrapper/model.mustache
@@ -11,7 +11,7 @@ import java.util.Arrays;
 {{#imports}}
     import {{import}};
 {{/imports}}
-import com.hubsante.model.cisu.DistributionElement;
+import com.hubsante.model.common.DistributionElement;
 import com.fasterxml.jackson.dataformat.xml.annotation.*;
 {{#serializableModel}}
     import java.io.Serializable;
